Update configuration information